--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,6 @@ test {
 	useJUnitPlatform()
 	testLogging {
 		events "passed", "skipped", "failed"
+		exceptionFormat "full"  // Show full exception details on failure
 	}
 }
